# naks_infosystem_files

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
src/: cli.py
src/app/: config.py
src/app/application/common/: exc.py
src/app/application/dto/: __init__.py  data.py
src/app/application/interactors/: acst.py  personal_naks_certification.py  personal_naks_protocol.py
src/app/application/interfaces/: gateways.py
src/app/infrastructure/: fs.py
src/app/infrastructure/database/: mappers.py  models.py  setup.py
src/app/infrastructure/database/migrations/: env.py
src/app/infrastructure/database/migrations/versions/: 4d39cfbf6552_initial.py
src/app/main/: app.py  dependencies.py
src/app/presentation/routes/: acst.py  exc_handlers.py  personal_naks_certification.py  personal_naks_protocol.py
src/app/utils/: path_utils.py
test/: conftest.py  funcs.py
test/test_routes/: base_test_routes.py  client.py  test_acst.py  test_personal_naks_certification.py  test_personal_naks_protocol.py
